--- a/service.yml
+++ b/service.yml
@@ -1,6 +1,7 @@
 
 
 - import_playbook: "service.apache.yml"
+- import_playbook: "service.certbot.yml"
 - import_playbook: "service.ddclient.yml"
 - import_playbook: "service.php_fpm.yml"
 
