Activate PHP Support On Apache
PHP is not enabled for Apache due to omission. The required Apache
modules are not loaded and also PHP execution is not proxied to the
PHP FPM for execution. The patch fixes the problem.

--- a/service.php_fpm.yml
+++ b/service.php_fpm.yml
@@ -18,6 +18,16 @@
             cache_valid_time: 86400
             default_release: "{{ ansible_distribution_release }}"
 
+        - name: "Setup PHP FPM: Enable Custom Apache Configuration"
+          file:
+            dest: "/etc/apache2/{{ item.type }}-enabled/{{ item.name }}"
+            src: "/etc/apache2/{{ item.type }}-available/{{ item.name }}"
+            state: "{{ item.state|default('link') }}"
+          loop:
+            - { type: "conf", name: "{{ php_component_prefix }}-fpm.conf", state: "link" }
+            - { type: "mods", name: "proxy.load", state: "link" }
+            - { type: "mods", name: "proxy_fcgi.load", state: "link" }
+
         - name: "Setup PHP FPM Service: Enable PHP FPM Daemon"
           service:
             name: "{{ php_fpm_service }}"
