Patch Typo In Document Root Path

--- a/website.test.kmchan3.space.yml
+++ b/website.test.kmchan3.space.yml
@@ -12,7 +12,7 @@
 
         - name: "Setup Website test.kmchan3.space: Create Directories"
           file:
-            dest: "/var/html/{{ item.name }}"
+            dest: "/var/www/{{ item.name }}"
             state: "directory"
             owner: "{{ item.owner|default('root') }}"
             group: "{{ item.group|default('root') }}"
