Increase User File Descriptor Limit
Some programs opens more files than expected. Therefore, the maximum
number of open file descriptor is increased via pam_limits.

--- a/account.common.yml
+++ b/account.common.yml
@@ -6,6 +6,21 @@
 
   tasks:
 
+    - name: "Applying Common Settings to Account: Update User Limits"
+      copy:
+        dest: "/etc/security/limits.d/kmchan.conf"
+        src: "{{ playbook_dir }}/files/etc/security/limits.d/kmchan.conf"
+        owner: "root"
+        group: "root"
+        mode: "0644"
+
+
+- hosts: "all"
+  become: true
+  become_user: "root"
+
+  tasks:
+
     - name: "Applying Common Settings to Account: Creating Directories"
       file:
         dest: "/home/kmchan/{{ item.path }}"
