--- a/account.yml
+++ b/account.yml
@@ -2,6 +2,7 @@
 
 - import_playbook: "account.config.yml"
 - import_playbook: "account.common.yml"
+- import_playbook: "account.docker.yml"
 - import_playbook: "account.firefox.yml"
 - import_playbook: "account.geeqie.yml"
 - import_playbook: "account.server.yml"
