--- a/service.yml
+++ b/service.yml
@@ -3,6 +3,7 @@
 - import_playbook: "service.apache.yml"
 - import_playbook: "service.certbot.yml"
 - import_playbook: "service.ddclient.yml"
+- import_playbook: "service.docker.yml"
 - import_playbook: "service.mysql.yml"
 - import_playbook: "service.php_fpm.yml"
 
