Fix Another Typo in MySQL Service Playbook

--- a/service.mysql.yml
+++ b/service.mysql.yml
@@ -40,7 +40,7 @@
 
         - name: "Setup MySQL Service: Enable MySQL Daemon"
           service:
-            name: "apache2.service"
+            name: "mysql.service"
             enabled: true
 
 
