--- a/account.yml
+++ b/account.yml
@@ -7,6 +7,7 @@
 - import_playbook: "account.geeqie.yml"
 - import_playbook: "account.server.yml"
 - import_playbook: "account.mysql.yml"
+- import_playbook: "account.postgresql.yml"
 - import_playbook: "account.steam.yml"
 
 
