Refactor Video Card Setup Code
The playbooks for video card setup is refactored. A new playbook
is created which handles the tasks of 1) setting up kernel mode
settings, 2) Xorg configuration and 3) vfio-pci passthrough.

--- a/hardware.yml
+++ b/hardware.yml
@@ -1,10 +1,10 @@
 
 
 - import_playbook: "hardware.blockdev.yml"
-- import_playbook: "hardware.kms.yml"
 - import_playbook: "hardware.kvm.yml"
 - import_playbook: "hardware.sensor.yml"
 - import_playbook: "hardware.usb.yml"
 - import_playbook: "hardware.vfio.yml"
+- import_playbook: "hardware.video.yml"
 
 
