Guest Instance Playbook Revamp
The guest.instances.yml playbook is simplified.

First of all, the majority of the shell code is moved to a single
file; shell scripts includes that file and invoke the function
there. It limits most code generation to that single file. Other
template files are also simplified as well. As a result, template
file 'guest.instances.inc.j2' is be removed entirely.

Also, to simplify configuration and make the playbook more robust,
the systemd service file installed removes the memory lock limit
entirely, instead of guessing how much the limit should be lifted.

--- a/guest.instances.yml
+++ b/guest.instances.yml
@@ -30,6 +30,7 @@
       - { path: "/usr/local/sbin/guest-daemon", mode: "0755" }
       - { path: "/usr/local/sbin/guest-initialize", mode: "0755" }
       - { path: "/usr/local/sbin/guest-finalize", mode: "0755" }
+      - { path: "/usr/local/lib/guest/functions", mode: "0644", placeholder: "functions" }
       - { path: "/var/lib/guest/name/.asoundrc", mode: "0644", placeholder: "name" }
 
   tasks:
@@ -62,6 +63,14 @@
       with_subelements:
         - "{{ guest_instances|default([]) }}"
         - "admins"
+
+    - name: "Create Guest Instances: Create Necessary Directories"
+      file:
+        dest: "/usr/local/lib/guest"
+        state: "directory"
+        owner: "kmchan"
+        group: "kmchan"
+        mode: "0755"
 
     - name: "Create Guest Instances: Install BIOS File"
       copy:
