Network Configuration Refactor
New playbooks are added for network management.

A new playbook is created to manage static network interface, including
bridges used for guest machines. Existing playbook for managing guest
networks are removed as its function is subsumed by the new playbook.

Another new playbook is added to deal with networking in initial RAM
disk. It can add network related modules to the disk. It can also
remove unwanted netplan configuration files created by the initial
RAM disk.

Finally, a new playbook is added to setup network related kernel
parameters.

--- a/network.devices.yml
+++ b/network.devices.yml
@@ -6,13 +6,13 @@
 
   tasks:
 
-    - name: "Creating Guest Networks: Install Netplan Configuration"
+    - name: "Configuring Network Devices: Install Netplan Configuration"
       template:
-        dest: "/etc/netplan/99-guest.yaml"
-        src: "files/etc/netplan/99-guest.yaml.j2"
+        dest: "/etc/netplan/99-network-devices.yaml"
+        src: "files/etc/netplan/99-network-devices.yaml.j2"
         owner: "root"
         group: "root"
-        mode: "0600"
+        mode: "0644"
       notify:
         - "Reload Netplan Service"
 
