--- a/network.yml
+++ b/network.yml
@@ -1,6 +1,7 @@
 
 
 - import_playbook: "network.devices.yml"
+- import_playbook: "network.initramfs.yml"
 - import_playbook: "network.options.yml"
 
 
