New Playbook for Loading Network Modules
Some kernel parameters are only available after the corresponding
kernel module is loaded. Assignment of such parameters are ignored
before the corresponding modules are loaded.

For example, parameters net.bridge.bridge-nf-call-*tables are only
available after br_netfilter module is loaded, which happens when
creating the first bridge interface. In Ubuntu 20.04, kernel
parameters are set before network interfaces are created, so
setting these parameters in /etc/sysctl.conf or /etc/sysctl.d will
NOT work.

To resolve the problem, we can manually load modules via
/etc/modules-load.d which should happen before the parameters are
set. A new playbook, network.modules.yml, is added to do exactly
this.

--- a/network.yml
+++ b/network.yml
@@ -2,6 +2,7 @@
 
 - import_playbook: "network.devices.yml"
 - import_playbook: "network.initramfs.yml"
+- import_playbook: "network.modules.yml"
 - import_playbook: "network.options.yml"
 
 
