--- a/files/home/kmchan/.local/share/applications/steam.desktop
+++ b/files/home/kmchan/.local/share/applications/steam.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Steam
 Comment=Application for managing and playing games on Steam
-Exec=env STEAM_RUNTIME_PREFER_HOST_LIBRARIES=1 fcitx-proxy-launch firejail --profile=/home/kmchan/.config/firejail/steam.profile /usr/games/steam %U
+Exec=env STEAM_RUNTIME_PREFER_HOST_LIBRARIES=1 BUMBLEBEE_SOCKET=/home/kmchan/.bumblebee.socket fcitx-proxy-launch firejail --profile=/home/kmchan/.config/firejail/steam.profile /usr/games/steam %U
 Icon=steam
 Terminal=false
 Type=Application
