Fix Incorrect Directory Ownership in Guest Playbook
The directory /usr/local/lib/guest should be owned by root, but was
created with incorrect owner. The commit fixes the problem.

--- a/guest.instances.yml
+++ b/guest.instances.yml
@@ -68,8 +68,8 @@
       file:
         dest: "/usr/local/lib/guest"
         state: "directory"
-        owner: "kmchan"
-        group: "kmchan"
+        owner: "root"
+        group: "root"
         mode: "0755"
 
     - name: "Create Guest Instances: Install BIOS File"
