--- a/website.demo.kmchan3.space.yml
+++ b/website.demo.kmchan3.space.yml
@@ -12,14 +12,14 @@
 
         - name: "Setup Website demo.kmchan3.space: Create Group"
           group:
-            name: "demo"
+            name: "www-demo"
             system: "yes"
             state: "present"
 
         - name: "Setup Website demo.kmchan3.space: Create User"
           user:
-            name: "demo"
-            group: "demo"
+            name: "www-demo"
+            group: "www-demo"
             home: "/var/www/demo.kmchan3.space"
             password: "!"
             shell: "/bin/bash"
@@ -34,12 +34,12 @@
             state: "directory"
             owner: "{{ item.owner|default('root') }}"
             group: "{{ item.group|default('root') }}"
-            mode: "0755"
+            mode: "{{ item.mode|default('0755') }}"
           loop:
-            - { name: "/demo.kmchan3.space", owner: "demo", group: "demo" }
-            - { name: "/demo.kmchan3.space/html", owner: "demo", group: "demo" }
-            - { name: "/demo.kmchan3.space/html/.well-known", owner: "demo", group: "demo" }
-            - { name: "/demo.kmchan3.space/scripts", owner: "demo", group: "demo" }
+            - { name: "/demo.kmchan3.space", owner: "www-demo", group: "www-demo", mode: "0755" }
+            - { name: "/demo.kmchan3.space/html", owner: "www-demo", group: "www-data", mode: "0755" }
+            - { name: "/demo.kmchan3.space/html/.well-known", owner: "www-demo", group: "www-data", mode: "0755" }
+            - { name: "/demo.kmchan3.space/projects", owner: "www-demo", group: "www-demo", mode: "0755" }
 
         - name: "Setup Website demo.kmchan3.space: Install Configuration Files"
           template:
@@ -47,8 +47,9 @@
             src: "files/{{ item.path }}.j2"
             owner: "{{ item.owner|default('root') }}"
             group: "{{ item.group|default('root') }}"
-            mode: "{{ item.group|default('0644') }}"
+            mode: "{{ item.mode|default('0644') }}"
           loop:
+            - { path: "/etc/sudoers.d/demo.kmchan3.space", mode: "0600" }
             - { path: "/etc/apache2/sites-available/local_demo.kmchan3.space.conf" }
             - { path: "{{ php_config_path }}/fpm/pool.d/demo.kmchan3.space.conf" }
 
