--- a/website.test.kmchan3.space.yml
+++ b/website.test.kmchan3.space.yml
@@ -30,16 +30,18 @@
 
         - name: "Setup Website test.kmchan3.space: Create Directories"
           file:
-            dest: "/var/www/{{ item.name }}"
+            dest: "{{ item.name }}"
             state: "directory"
             owner: "{{ item.owner|default('root') }}"
             group: "{{ item.group|default('root') }}"
             mode: "{{ item.mode|default('0755') }}"
           loop:
-            - { name: "/test.kmchan3.space", owner: "www-test", group: "www-test", mode: "0755" }
-            - { name: "/test.kmchan3.space/html", owner: "www-test", group: "www-data", mode: "0755" }
-            - { name: "/test.kmchan3.space/html/.well-known", owner: "www-test", group: "www-data", mode: "0755" }
-            - { name: "/test.kmchan3.space/projects", owner: "www-test", group: "www-test", mode: "0755" }
+            - { name: "/var/log/websites", owner: "root", group: "root", mode: "0755" }
+            - { name: "/var/log/websites/test.kmchan3.space", owner: "www-test", group: "www-test", mode: "0750" }
+            - { name: "/var/www/test.kmchan3.space", owner: "www-test", group: "www-test", mode: "0755" }
+            - { name: "/var/www/test.kmchan3.space/html", owner: "www-test", group: "www-data", mode: "0755" }
+            - { name: "/var/www/test.kmchan3.space/html/.well-known", owner: "www-test", group: "www-data", mode: "0755" }
+            - { name: "/var/www/test.kmchan3.space/projects", owner: "www-test", group: "www-test", mode: "0755" }
 
         - name: "Setup Website test.kmchan3.space: Install Configuration Files"
           template:
@@ -49,8 +51,9 @@
             group: "{{ item.group|default('root') }}"
             mode: "{{ item.mode|default('0644') }}"
           loop:
-            - { path: "/etc/sudoers.d/test.kmchan3.space", mode: "0600" }
             - { path: "/etc/apache2/sites-available/local_test.kmchan3.space.conf" }
+            - { path: "/etc/logrotate.d/test.kmchan3.space" }
+            - { path: "/etc/sudoers.d/test.kmchan3.space", mode: "0600" }
             - { path: "{{ php_config_path }}/fpm/pool.d/test.kmchan3.space.conf" }
 
         - name: "Setup Website test.kmchan3.space: Enable Custom Apache Configuration"
