Clean Up Apache Site Configuration
The site configuration of apache service is sanitized as follow. First
of all, the default host is entirely disabled. Then, the site configuration
files are renamed so that they are loaded in correct order and ensure that
desktop.kmchan3.space is the default virtual host.

--- a/service.apache.yml
+++ b/service.apache.yml
@@ -109,6 +109,9 @@
             - { type: "mods", name: "status.conf", state: "absent" }
             - { type: "mods", name: "local_proxy_protocol.load", state: "link" }
 
+        - name: "Setup Apache Service: Disable Site"
+          shell: "a2dissite -q 000-default"
+
         - name: "Setup Apache Service: Enable Apache Daemon"
           service:
             name: "apache2.service"
