--- a/website.demo.kmchan3.space.yml
+++ b/website.demo.kmchan3.space.yml
@@ -51,7 +51,7 @@
             group: "{{ item.group|default('root') }}"
             mode: "{{ item.mode|default('0644') }}"
           loop:
-            - { path: "/etc/apache2/sites-available/local_demo.kmchan3.space.conf" }
+            - { path: "/etc/apache2/sites-available/001-demo.kmchan3.space.conf" }
             - { path: "/etc/logrotate.d/demo.kmchan3.space" }
             - { path: "/etc/sudoers.d/demo.kmchan3.space", mode: "0600" }
             - { path: "{{ php_config_path }}/fpm/pool.d/demo.kmchan3.space.conf" }
@@ -62,6 +62,6 @@
             src: "/etc/apache2/{{ item.type }}-available/{{ item.name }}"
             state: "{{ item.state|default('link') }}"
           loop:
-            - { type: "sites", name: "local_demo.kmchan3.space.conf", state: "link" }
+            - { type: "sites", name: "001-demo.kmchan3.space.conf", state: "link" }
 
 
