--- a/website.demo.kmchan3.space.yml
+++ b/website.demo.kmchan3.space.yml
@@ -56,12 +56,7 @@
             - { path: "/etc/sudoers.d/demo.kmchan3.space", mode: "0600" }
             - { path: "{{ php_config_path }}/fpm/pool.d/demo.kmchan3.space.conf" }
 
-        - name: "Setup Website demo.kmchan3.space: Enable Custom Apache Configuration"
-          file:
-            dest: "/etc/apache2/{{ item.type }}-enabled/{{ item.name }}"
-            src: "/etc/apache2/{{ item.type }}-available/{{ item.name }}"
-            state: "{{ item.state|default('link') }}"
-          loop:
-            - { type: "sites", name: "001-demo.kmchan3.space.conf", state: "link" }
+        - name: "Setup Website demo.kmchan3.space: Enable Site"
+          shell: "a2ensite 001-demo.kmchan3.space"
 
 
